<resources>
    <string name="app_name">NotiKeeper</string>

    <!--    UI-->
    <string name="deleted_application">Deleted application</string>
    <string name="no_notifications">No notifications</string>
    <string name="error">Error</string>

    <!--    Check Access-->
    <string name="check_access_toast">Please check the box next to Notification Keeper And Helper</string>

    <!--    BottomNavigationView-->
    <string name="notifications">Notifications</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>

    <string name="application_list">Application list</string>

    <!--    Settings-->
    <string name="authentication_error">To continue using the application, you need to pass authentication</string>
    <string name="biometric_authentication">Biometric authentication</string>
    <string name="hide_system_notifications">Hide system notifications</string>
    <string name="hide_deleted_applications">Hide deleted applications</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="filter">Filter</string>
    <string name="filter_settings">Filter settings</string>
    <string name="hide_notifications_from">Hide notifications from:</string>
    <string name="return_data_for_the_last_24_hours">Return deleted data for the last 24 hours</string>
    <string name="return_data">Return deleted data</string>
    <string name="success">Successful</string>


    <!--    Delete data dialog-->
    <string name="delete_all_data_question">Are you sure? The operation cannot be canceled</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <!--    Delete item snackbar-->
    <string name="item_deleted">Deleted</string>

    <!--    Notification List Menu-->
    <string name="search">Search</string>
</resources>