<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/security_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/security_logo"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_security"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/biometric_authentication"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/security_logo"
                            app:layout_constraintEnd_toStartOf="@id/security_switch"
                            app:layout_constraintStart_toEndOf="@id/security_logo"
                            app:layout_constraintTop_toTopOf="@id/security_logo" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/security_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:theme="@style/Switch"
                            app:layout_constraintBottom_toBottomOf="@id/security_logo"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/security_logo" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/appearance_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/appearance_logo"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_appearance"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/hide_system_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/hide_system_notifications"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/appearance_logo"
                            app:layout_constraintEnd_toStartOf="@id/hide_system_switch"
                            app:layout_constraintStart_toEndOf="@id/appearance_logo"
                            app:layout_constraintTop_toTopOf="@id/appearance_logo" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/hide_system_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"
                            android:layout_margin="10dp"
                            android:theme="@style/Switch"
                            app:layout_constraintBottom_toBottomOf="@id/hide_system_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/hide_system_title" />

                        <TextView
                            android:id="@+id/hide_deleted_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/hide_deleted_applications"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/filter_title"
                            app:layout_constraintEnd_toStartOf="@id/hide_system_switch"
                            app:layout_constraintStart_toEndOf="@id/appearance_logo"
                            app:layout_constraintTop_toBottomOf="@id/hide_system_title" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/hide_deleted_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"
                            android:layout_marginEnd="10dp"
                            android:theme="@style/Switch"
                            app:layout_constraintBottom_toBottomOf="@id/hide_deleted_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/hide_deleted_title" />

                        <TextView
                            android:id="@+id/filter_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/filter"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/filter_button"
                            app:layout_constraintEnd_toStartOf="@id/filter_switch"
                            app:layout_constraintStart_toEndOf="@id/appearance_logo"
                            app:layout_constraintTop_toBottomOf="@id/hide_deleted_title" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/filter_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"
                            android:layout_marginEnd="10dp"
                            android:theme="@style/Switch"
                            app:layout_constraintBottom_toBottomOf="@id/filter_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/filter_title" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/filter_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/filter_settings"
                            android:textColor="@color/gray"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/filter_title"
                            app:strokeColor="@color/black"
                            app:strokeWidth="1dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/data_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/data_icon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_delete"
                            app:layout_constraintBottom_toBottomOf="@id/delete_all_data_button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/delete_all_data_button" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/delete_all_data_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/delete_all_data"
                            android:textColor="@color/gray"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/return_button"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/data_icon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@color/black"
                            app:strokeWidth="1dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/return_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/return_data"
                            android:textColor="@color/gray"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/data_icon"
                            app:layout_constraintTop_toBottomOf="@id/delete_all_data_button"
                            app:strokeColor="@color/black"
                            app:strokeWidth="1dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>